--- a/static/css/view.css
+++ b/static/css/view.css
@@ -13,6 +13,10 @@ body { height: 100%; margin: 0; padding: 0 }
     fill: orange;
 }
 
+.notice {
+    fill: red !important;
+}
+
 .bar.rate {
     fill: green;
 }
