--- a/templates/view.html
+++ b/templates/view.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/d3.v3.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/bignumber.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/view.js') }}"></script>
   <script type="text/javascript">
     $(function() {
-      window.initialize('{{orders|safe}}', "{{url_for('static', filename='')}}");
+      window.initialize()
     });
   </script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/view.css') }}" />
