--- a/static/css/view.css
+++ b/static/css/view.css
@@ -69,3 +69,18 @@ div.tooltip th, td {
 .grid path {
     stroke-width: 0;
 }
+
+#demo-menu-lower-left {
+    position: fixed;
+    display: block;
+    right: 0;
+    bottom: 0;
+    margin-right: 40px;
+    margin-bottom: 60px;
+    z-index: 900;
+}
+
+.mdl-menu__item.instrument_list {
+    height: 30px;
+    line-height: 30px;
+}
