Add new logic to follow window size changes.

--- a/templates/view.html
+++ b/templates/view.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/view.js') }}"></script>
   <script type="text/javascript">
     $(function() {
-      window.addInstrumentListHandler();
+      window.addHandlers();
       window.initialize()
     });
   </script>
